--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/next": "1.0.0-beta.6",
     "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.2.1",
