--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toggle": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.2.4",
+    "@tiptap/extension-text-align": "^2.11.9",
+    "@tiptap/extension-typography": "^2.11.9",
+    "@tiptap/extension-underline": "^2.11.9",
+    "@tiptap/pm": "^2.11.9",
+    "@tiptap/react": "^2.11.9",
+    "@tiptap/starter-kit": "^2.11.9",
     "@uploadthing/react": "^7.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
