--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "7.55.0",
+    "resend": "^4.5.0",
     "stripe": "^18.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
