--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "next-auth": "5.0.0-beta.27",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "7.55.0",
     "resend": "^4.5.0",
+    "sonner": "^2.0.3",
     "stripe": "^18.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
